feat: background styles

--- a/content/articles/2020-12-28-init.md
+++ b/content/articles/2020-12-28-init.md
@@ -14,3 +14,38 @@ description: "ブログを作った。"
   - Github Action
 
 CSS は自作する派。
+
+## テスト用
+
+### H3 タイトル
+
+本文
+
+### H4 タイトル
+
+本文
+
+### H5 タイトル
+
+本文
+
+### H6 タイトル
+
+本文
+
+_引用_
+
+`Code`
+
+~打ち消し線~
+
+[https://nekobato.net](リンク)
+
+```js
+// コードブロック
+const CodeBlock = "hoge";
+```
+
+iframe
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MEsuE35uSvo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen />
